banking-application-src/src/main/java/org/darksavant/test/bank/error/NotEnoughPermissionsException.java
package org.darksavant.test.bank.error;

public class NotEnoughPermissionsException extends RuntimeException {
    public NotEnoughPermissionsException(String message) {
        super(message);
    }
}

